# transliterate

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  README.rst  pyproject.toml  runtests.py  shell.py
docs/: conf.py
example/example/foo/: greekunaccented.py  latin_to_latin.py  samples.py
jupyter/: transliterate.ipynb
src/transliterate/: base.py  conf.py  decorators.py  discover.py  helpers.py  utils.py
src/transliterate/contrib/apps/translipsum/: __init__.py  utils.py
src/transliterate/contrib/languages/bg/: translit_language_pack.py
src/transliterate/contrib/languages/bg/data/: default.py
src/transliterate/contrib/languages/el/: translit_language_pack.py
src/transliterate/contrib/languages/el/data/: default.py
src/transliterate/contrib/languages/he/: translit_language_pack.py
src/transliterate/contrib/languages/hi/: translit_language_pack.py
src/transliterate/contrib/languages/hy/: translit_language_pack.py
src/transliterate/contrib/languages/hy/data/: __init__.py  default.py
src/transliterate/contrib/languages/ka/: translit_language_pack.py
src/transliterate/contrib/languages/ka/data/: __init__.py  default.py
src/transliterate/contrib/languages/l1/: translit_language_pack.py
src/transliterate/contrib/languages/l1/data/: __init__.py  default.py
src/transliterate/contrib/languages/mk/: translit_language_pack.py
src/transliterate/contrib/languages/mk/data/: default.py
src/transliterate/contrib/languages/mn/: translit_language_pack.py
src/transliterate/contrib/languages/mn/data/: default.py
src/transliterate/contrib/languages/ru/: translit_language_pack.py
src/transliterate/contrib/languages/ru/data/: __init__.py  default.py
src/transliterate/contrib/languages/sr/: translit_language_pack.py
src/transliterate/contrib/languages/sr/data/: default.py
src/transliterate/contrib/languages/uk/: translit_language_pack.py
src/transliterate/contrib/languages/uk/data/: default.py
src/transliterate/tests/: __init__.py  helpers.py  test_transliterate.py
src/transliterate/tests/data/: __init__.py  default.py
